--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
-.App {
+
+
+*{
+   box-sizing: border-box;
+   padding:0;
+   margin:0;
+   max-width:100%;
+   /* border:1px solid grey;  */
+}
+
+/*General Styles*/
+html{
+   font-size:62.5%;
+}
+
+.App{
+  font-size: 2rem;
+  /* font-family: sans-serif; */
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* header styles */
+header{
+  background-color: #000000;
   color: white;
+  font-size: 1.5rem;
+  padding: 1.2rem 1rem .8rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+header a{
+  color: #7c0000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* title/subtitle styles */
+.title{
+  padding: 5rem 3rem 3rem 3rem;
+  background-color: #7c0000;
+  color: white;
+  font-faily: 'Pacifico', cursive;
 }
+
+.title h1{
+  font-size: 5rem;
+  font-family: 'Yeseva One', cursive;
+}
+
+.title h2{
+  font-size: 2.3rem;
+  font-family: 'Yeseva One', cursive;
+}
+
+.love{
+  font-family: 'Pacifico', cursive;
+}
+
+.not{
+  text-decoration: line-through;
+}
+
+/* button styles */
+button {
+  padding: .8rem 1.2rem .8rem 1.2rem;
+  margin: 0 1.5rem 1.5rem 1.5rem;
+  border: none;
+  border-radius: 6px;
+  background-color: black;
+  color: white;
+  font-size: 1.8rem;
+  font-family: 'Yeseva One', cursive;
+}
+.buttons{
+  padding-bottom: 5rem;
+  background-color: #7c0000;
+}
+
+/* poem styles */
+.poemContainer{
+  padding: 6rem;
+  margin: 5rem 22rem 7rem 22rem;
+  background-image: url(./assets/oldpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: cover ;
+}
+
+.poemTitle{
+  font-size: 2.6rem;
+  font-family: 'Cedarville Cursive', cursive;
+}
+
+.author{
+  /* font-family: 'Montagu Slab', serif; */
+  font-family: 'Cedarville Cursive', cursive;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+
+.poemContainer p{
+  font-family: 'Cedarville Cursive', cursive;
+
+}
+
+
+
+
+
